#1  On click of logo on nav, it should take you back to homepage. #2  remove from quick quote the following fields:    -> 1-logo         2-address         3-type of event. overall, the quick quote should have only: the description of quick quote, name, phone number, email address, and message. The goal is, that the send button should be visible without scrolling. #4 color for button links, nav links etc. should be: #2f2d30       ->  currently it is blue. Please change. #5 navigation menu font size should be: 17px; #6 edit footer.      ->  remove address and replace with email address. altersevents@gmail.com. make sure it works.
#8 About page -> change "all about Mr. Lowy" to: "Meet Mr. Lowy"
       ->  single row, same typeset as our story

#11 Beauty tips -> inner page (when clicking into a beauty tips item) add padding to top.
         ->  approximately 52px;

#12 Beauty tips -> inner page should have blog title as the page title

#13 Beauty tips -> top background image should be the featured image of that beauty tip.
#14 Contact page -> edit map address
      ->  should be the one I provided
      -> https://www.google.com/maps/place/3+Strelisk+Ct+%23401a,+Kiryas+Joel,+NY+10950/@41.337602,-74.1753084,17.65z/data=!4m5!3m4!1s0x89c2d65683ce98af:0xea14e9e1aba1f45e!8m2!3d41.3376281!4d-74.1743945

--- a/wp-content/themes/custom-theme/style.css
+++ b/wp-content/themes/custom-theme/style.css
@@ -661,7 +661,7 @@ header p.site_desc { display: none;}
 /* Main Menu */
 #access .menu-header { width: 213px;}
 #access .menu-header ul li { position: relative;}
-#access .menu-header ul li a { color: #efefef; display: block; font: 19px/28px 'helvetica', 'sans-serif'; text-transform: uppercase; padding: 0 35px;line-height: 33px;}
+#access .menu-header ul li a { color: #efefef; display: block; font: 17px/28px 'helvetica', 'sans-serif'; text-transform: uppercase; padding: 0 35px;line-height: 33px;}
 #access .menu-header ul li a:hover { background: url(images/bg_transp.png) repeat;}
 #access .menu-header ul ul { background: url(assets/images/bg_transp.png) repeat; float: left; position: absolute; left: 213px; top: 0px; display: none; min-width: 160px;}
 #access .menu-header ul ul li { }
@@ -2082,7 +2082,7 @@ label.quote-header {
     padding: 6px 12px 8px 12px !important;
 }
 #ncf_sidebar.ncf_minimalistic .ncf_sidebar_header{
-    height: 220px !important;
+    height: 126px !important;
 }
 .ncf_sidebar_content {
     position: relative !important;
@@ -2188,4 +2188,7 @@ div#ncf_sidebar {
     width: 90%;
     margin: 0 auto;
     text-align: center;
+}
+.menu-item a:hover{
+  color:#2f2d30 !important;
 }
